--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1>Piotr Piaskowski</h1>
         <p><em>Future <strong><a href="https://bootcamp.learn.utoronto.ca/blog/what-is-a-full-stack-developer/#:~:text=Full%20stack%20technology%20refers%20to,can%20see%20and%20interact%20with.">Full Stack Developer</a></strong></em></p>
         <p>
-          Hi, I'm 28 years old and I'm from Poland. I live in the UK for almost 10 years now. I'm a proud daddy for my beautiful daughter Eliza.
+          Hi, I'm 28 years old and I'm from Poland. I live in the UK for almost 10 years now.
         </p>
       </td>
     </tr>
